--- a/package.json
+++ b/package.json
@@ -12,10 +12,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "antd": "^4.16.10",
+    "bootstrap": "^5.0.2",
     "express": "^4.17.1",
     "isomorphic-unfetch": "^3.1.0",
     "next": "^11.0.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2"
   },
   "devDependencies": {
