--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "next": "^11.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
