--- a/package.json
+++ b/package.json
@@ -19,10 +19,14 @@
     "next": "^11.0.1",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-slick": "^0.28.1",
+    "styled-components": "^5.3.0"
   },
   "devDependencies": {
     "eslint": "^7.32.0",
-    "eslint-plugin-react": "^7.24.0"
+    "eslint-plugin-react": "^7.24.0",
+    "eslint-plugin-import": "^2.23.4",
+    "eslint-plugin-react-hooks": "^4.2.0"
   }
 }
