--- a/package.json
+++ b/package.json
@@ -13,14 +13,24 @@
   "license": "ISC",
   "dependencies": {
     "antd": "^4.16.10",
+    "axios": "^0.21.1",
     "bootstrap": "^5.0.2",
+    "classnames": "^2.3.1",
     "express": "^4.17.1",
+    "faker": "^5.5.3",
+    "immer": "^9.0.5",
     "isomorphic-unfetch": "^3.1.0",
     "next": "^11.0.1",
+    "next-redux-wrapper": "^7.0.2",
     "react": "^17.0.2",
     "react-bootstrap": "^2.0.0-beta.4",
     "react-dom": "^17.0.2",
+    "react-redux": "^7.2.4",
     "react-slick": "^0.28.1",
+    "redux": "^4.1.1",
+    "redux-devtools-extension": "^2.13.9",
+    "redux-saga": "^1.1.3",
+    "shortid": "^2.2.16",
     "styled-components": "^5.3.0"
   },
   "devDependencies": {
